# octopus-debian-package

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  PACKAGING  README  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  changelog.dch  control  copyright  octopus-doc.install  octopus.install  rules  rules.bkp  watch
doc/: Makefile.in  oct-atomic_occupations.pod  oct-casida_spectrum.pod  oct-center-geom.pod  oct-display_partitions.pod  oct-harmonic-spectrum.pod  oct-propagation_spectrum.pod  oct-run_periodic_table.pod  oct-run_regression_test.pl.pod  oct-run_testsuite.sh.pod  oct-vibrational_spectrum.pod  oct-xyz-anim.pod  octopus.pod
doc/html/: Makefile.in  vars.php  varsLeftFrame.php  varsRightFrame.html
external_libs/: Makefile.in
external_libs/bpdn/: Makefile.in
external_libs/dftd3/: Makefile.in
external_libs/fortrancl/: Makefile.am  Makefile.in  cl_command_queue_low.c  cl_context_low.c  cl_event_low.c  cl_kernel.f90  cl_kernel_low.c  cl_program_low.c  clfft_low.c
external_libs/metis-5.1/: Makefile.in
external_libs/qshep/: Makefile.in
external_libs/rapidxml/: Makefile.in
external_libs/spglib-1.9.9/: Makefile.in  aclocal.m4  config.h.in  configure
external_libs/yaml-0.1.4/: Makefile.in
liboct_parser/: Makefile.in  parse_exp.c
m4/: ac_prog_sed.m4  arch.m4  berkeleygw.m4  blacs.m4  blas.m4  clmath.m4  cuda.m4  cxx_compile_stdcxx.m4  elpa.m4  etsf_io.m4  fc_command_line.m4  fcflags.m4  fortran.m4  gdlib.m4  isf.m4  lapack.m4  libfm.m4  metis.m4  mpi.m4  netcdf.m4  nfft.m4  nlopt.m4  octopus_compilation_info.m4  openmp.m4  parmetis.m4  pfft.m4  pnfft.m4  poke.m4  scalapack.m4  sparskit.m4  stdcpp.m4  zdotc.m4
scripts/: Makefile.in  git_commit_hash.sh  mk_functionals_list.pl  mk_varinfo.pl  oct-check_deallocs  octopus.spec.in  true_compiler.sh  var2html.pl
share/: Makefile.in  variables  varinfo
share/opencl/: Makefile.am  Makefile.in  cl_complex.h  cl_reduce.h  copy.cl  curl.cl  get_points.cl  mesh_batch_single.cl  mesh_to_cube.cl  pml.cl  points.cl  projector.cl  projector_commutator.cl  set_zero.cl  split.cl
share/pseudopotentials/: Makefile.in
share/recipes/: Makefile.in
share/util/: Makefile.in
src/: Makefile.am  Makefile.in  common-rules.make
src/basic/: accel.F90  accel_inc.F90  alloc_cache_low.cc  blacs_proc_grid.F90  calc_mode_par.F90  cgal_polyhedra_low.cc  clblas.F90  clblast_low.c  cublas.cc  cuda.F90  cuda_low.cc  gdlib_f.c  getopt_f.c  global.F90  iihash_low.cc  io_binary.c  io_binary.h  io_binary_f.F90  io_binary_f_inc.F90  io_csv.c  kind.F90  lattice_vectors.F90  linked_list.F90  list_node.F90  messages.F90  mpi.F90  mpi_inc.F90  mpi_test.F90  multicomm.F90  nvtx_low.cc  oct_f.c  profiling.F90  recipes.c  signals.c  sihash_low.cc  sort_low.cc  space.F90  sphash.F90  sphash_low.cc  string.F90  (+7 more)
src/basis_set/: atomic_orbital.F90  atomic_orbital_inc.F90  loewdin.F90  loewdin_inc.F90  orbitalbasis.F90  orbitalbasis_inc.F90  orbitalset.F90  orbitalset_inc.F90  orbitalset_utils.F90  orbitalset_utils_inc.F90
src/boxes/: box.F90  box_cgal.F90  box_cylinder.F90  box_factory.F90  box_parallelepiped.F90  box_sphere.F90
src/classical/: charged_particle.F90  classical_particle.F90  classical_particles.F90  propagator_data_classical_particles.F90
src/dftbplus/: dftb.F90
src/electrons/: chebyshev_filter_bounds.F90  chebyshev_filter_bounds_inc.F90  current.F90  dos.F90  eigen_cg_inc.F90  eigen_chebyshev.F90  eigen_chebyshev_inc.F90  eigen_evolution_inc.F90  eigen_plan_inc.F90  eigen_rmmdiis.F90  eigen_rmmdiis_inc.F90  eigensolver.F90  eigensolver_inc.F90  electrons.F90  elf.F90  energy_calc.F90  energy_calc_inc.F90  exponential.F90  forces.F90  forces_inc.F90  kpoints.F90  linear_solver.F90  linear_solver_inc.F90  magnetic.F90  matter.F90  partial_charges.F90  pert.F90  pert_inc.F90  perturbation.F90  perturbation_electric.F90  perturbation_ionic.F90  perturbation_kdotp.F90  perturbation_magnetic.F90  perturbation_magnetic_inc.F90  perturbation_none.F90  preconditioners.F90  preconditioners_inc.F90  stress.F90  subspace.F90  subspace_inc.F90  (+11 more)
src/grid/: affine_coordinates.F90  basins.F90  (+55 more)
testsuite/: Makefile.in  README  oct-run_regression_test.pl  oct-run_testsuite.sh.in
testsuite/maxwell/: 01-free-propagation.01-1_pulse_td.inp  01-free-propagation.02-2_pulses_td.inp  01-free-propagation.test  02-external-current.01-gaussian_current_pulse.inp  02-external-current.02-gaussian_current_pulse_with_pml.inp  02-external-current.03-gaussian_current_pulse_with_mask.inp  02-external-current.test  03-linear-medium.01-cosinoidal_pulse_td.inp  03-linear-medium.02-cosinoidal_pulse_td_pml.inp  03-linear-medium.03-cosinoidal_pulse_td_pml_unpacked.inp  03-linear-medium.test  04-linear-medium-from-file.01-cube_medium_from_file.inp  04-linear-medium-from-file.test  05-plane_waves.01-pulse_pml.inp  06-circular-polarization.01-1_puse_circ_pol.inp  07-mode-resolved-maxwell-ks-propagation.01-1D-Helium-ground-state.inp  07-mode-resolved-maxwell-ks-propagation.02-kick-of-the-electronic-subsystem.inp  07-mode-resolved-maxwell-ks-propagation.test  08-restart-maxwell.01-free-propagation_fromscratch.inp  08-restart-maxwell.01-free-propagation_restarted.inp  08-restart-maxwell.02-external-current-pml_fromscratch.inp  08-restart-maxwell.02-external-current-pml_restarted.inp  08-restart-maxwell.03-linear-medium_fromscratch.inp  08-restart-maxwell.03-linear-medium_restarted.inp  08-restart-maxwell.test  09-drude-medium-from-file.01-gold-np.inp  09-drude-medium-from-file.02-gold-np-part-one.inp  09-drude-medium-from-file.03-gold-np-part-two.inp  09-drude-medium-from-file.04-gold-np-external-source.inp  09-drude-medium-from-file.test  10-current-to-maxwell.01-all-forces-non-self-consistent.inp  10-current-to-maxwell.test  11-leapfrog.01-fullrun.inp  11-leapfrog.02-pml_fullrun.inp  11-leapfrog.03-pml_medium_fullrun.inp  11-leapfrog.04-pml_medium_restart_part1.inp  11-leapfrog.05-pml_medium_restart_part2.inp  11-leapfrog.test  12-tddft-currents-to-maxwell.01-benzene-gs.inp  12-tddft-currents-to-maxwell.02-benzene-mxll-td-length-gauge.inp  (+5 more)
(+1228 files in other folders)
